fix(theme): layout issues in alerts last paragraphs

--- a/assets/scss/content/_content.scss
+++ b/assets/scss/content/_content.scss
@@ -31,7 +31,15 @@ p {
 }
 
 .display-4 {
+
     @extend .text-center;
     @extend .mb-5;
     font-size:3rem;
+
+}
+
+.alert p:last-child {
+
+    margin-bottom:0;
+
 }
